Trying nester named router-outlet - not working
Check it out: https://angular.io/guide/router#add-a-secondary-route

--- a/src/app/body-parts/menu/menu.component.html
+++ b/src/app/body-parts/menu/menu.component.html
@@ -22,7 +22,13 @@
       <a [routerLink]="[{ outlets: { header: ['green'], footer: ['green'] } }]">Go Green for Header and Footer</a>
     </li>
     <li>
-        <a [routerLink]="[{ outlets: { header: ['blue'], footer: ['blue'] } }]">Go Blue for Header and Footer</a>
+      <a [routerLink]="[{ outlets: { header: ['blue'], footer: ['blue'] } }]">Go Blue for Header and Footer</a>
+    </li>
+    <li>
+      <a [routerLink]="[{ outlets: { content: ['games'] } }]">Games to Content</a>
+    </li>
+    <li>
+      <a [routerLink]="[{ outlets: { content: ['books'] } }]">Books to Content</a>
     </li>
   </ul>
 </div>
